Alignment issues

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,7 +1,3 @@
-@import url("https://fonts.googleapis.com/css2?family=Anek+Tamil:wght@100..800&display=swap");
-@import url("https://fonts.googleapis.com/css2?family=Anek+Tamil:wght@100..800&family=New+Amsterdam&display=swap");
-@import url("https://fonts.googleapis.com/css2?family=Anek+Tamil:wght@100..800&family=New+Amsterdam&family=Oswald:wght@200..700&display=swap");
-
 :root {
   --anek-font: "Anek Tamil", sans-serif;
   --arial-font: "Arial", sans-serif;
@@ -956,9 +952,7 @@ hr {
   transform: translateY(-50%);
   z-index: 10;
   cursor: pointer;
-  color: black;
-  font-size: 20px;
-}
+*/
 
 .swiper-button-prev {
   left: 10px;
@@ -966,4 +960,4 @@ hr {
 
 .swiper-button-next {
   right: 10px;
-} */
+} 
